# prompt-catalog

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml  codeql.yml  publish.yml
case-studies/: README.md  calcom-scheduling-saas.md  maybe-personal-finance.md  medplum-healthcare.md  sentry-error-tracking.md
prompts/: index.json
schema/: prompt.schema.json
server/: README.md  pyproject.toml
server/prompt_catalog_mcp/: __init__.py  catalog.py  cli.py  server.py  validator.py
server/tests/: conftest.py  test_catalog.py  test_cli.py  test_server.py  test_validator.py
starter-kits/: README.md  api-backend.yaml  cloud-native.yaml  fintech-platform.yaml  healthcare-app.yaml  mobile-app.yaml  saas-web-app.yaml
